--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ DB_USER_NAME="root"
 DB_PASSWORD="ckEbm2TW"
 DB_HOST="localhost"
 DB_NAME="nitkhack"
+ML_ENDPOINT="http://efc3aceb-ffb9-4ff0-be95-c6965e0cf929.japaneast.azurecontainer.io/score"
+ML_KEY="jkjzbW0OB4fikvKt69ZBQxpe6OU76gzz"
